vlib/v/parser/tests/for_loop_update_stmt_first_err.vv
fn main() {
	i := 0
	for i++; i < 10; i++ {
		println(i)
	}
}
